deploy/kubernetes/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: spiffe-demo
  labels:
    app: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      serviceAccountName: postgresql
      containers:
        - name: postgresql
          image: mattiasgees/spiffe-postgres@sha256:049838d41af32bd795836ea1060819153e74cd054150ec5f13353acae377cb94
          imagePullPolicy: Always
          volumeMounts:
            - name: postgresql-certs
              mountPath: /opt/postgresql-certs
            - name: postgres-config
              mountPath: /etc/postgresql
          args: ["-c", "config_file=/etc/postgresql/postgresql.conf"]
          ports:
          - containerPort: 5432
            name: postgresql
            protocol: TCP
        - name: spiffe-helper
          image: mattiasgees/spiffe-helper@sha256:12120ab350d2710dfc74e1344d09c2665545eba291e156bc8f0ea01dc9a11f74
          imagePullPolicy: Always
          volumeMounts:
            - name: spiffe-workload-api
              mountPath: /spiffe-workload-api
              readOnly: true
            - name: postgresql-certs
              mountPath: /opt/postgresql-certs
            - name: spiffe-helper
              mountPath: /etc/spiffe-helper
          args: ["-config", "/etc/spiffe-helper/helper.conf"]
      volumes:
      - csi:
          driver: csi.spiffe.io
          readOnly: true
        name: spiffe-workload-api
      - name: postgresql-certs
        emptyDir:
          medium: Memory
      - name: spiffe-helper
        configMap:
          name: spiffe-helper
      - name: postgres-config
        configMap:
          name: postgres-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: spiffe-demo
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
