deploy/kubernetes/spiffe-customer-rogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spiffe-customer-rogue
  namespace: spiffe-demo
  labels:
    app: spiffe-customer-rogue
spec:
  selector:
    matchLabels:
      app: spiffe-customer-rogue
  template:
    metadata:
      labels:
        app: spiffe-customer-rogue
    spec:
      serviceAccountName: spiffe-customer-rogue
      containers:
        - name: spiffe-customer-rogue
          image: mattiasgees/spiffe-demo@sha256:e67d8e53e2f32c2c9a87b7d59bf6ae500b2245de0f76c721c82c7c8f53787f30
          imagePullPolicy: Always
          volumeMounts:
            - name: spiffe-workload-api
              mountPath: /spiffe-workload-api
              readOnly: true
            - name: aws-config
              mountPath: /tmp/aws
          args:
          - customer
          - --authorized-spiffe
          - "spiffe://spire.internal.mattiasgees.be/ns/spiffe-demo/sa/spiffe-backend"
          - --server-address
          - 0.0.0.0:8080
          - --backend-service
          - https://spiffe-backend.spiffe-demo.svc.cluster.local
          - --aws-region
          - eu-west-2
          - --s3-bucket
          - mattias-spiffe-demo
          - --authorized-spiffe-httpbackend
          - "spiffe://spire.internal.mattiasgees.be/ns/spiffe-demo/sa/spiffe-httpbackend"
          - --httpbackend-service
          - https://spiffe-httpbackend.spiffe-demo.svc.cluster.local
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        # - name: spire-tools
        #   image: mattiasgees/spire-tools:latest
        #   imagePullPolicy: Always
        #   env:
        #   - name: AWS_CONFIG_FILE
        #     value: "/tmp/aws/config"
        #   volumeMounts:
        #     - name: spiffe-workload-api
        #       mountPath: /spiffe-workload-api
        #       readOnly: true
        #     - name: aws-config
        #       mountPath: /tmp/aws
      volumes:
      - csi:
          driver: csi.spiffe.io
          readOnly: true
        name: spiffe-workload-api
      - name: aws-config
        emptyDir:
          medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: spiffe-customer-rogue
  namespace: spiffe-demo
spec:
  selector:
    app: spiffe-customer-rogue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://login.mattias-gcp.jetstacker.net/oauth2/start?rd=https://$host$request_uri$is_args$args
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.authentication.svc.cluster.local/oauth2/auth
  name: spiffe-customer-rogue
  namespace: spiffe-demo
spec:
  rules:
  - host: spiffe-demo-rogue.mattias-gcp.jetstacker.net
    http:
      paths:
      - backend:
          service:
            name: spiffe-customer-rogue
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - spiffe-demo-rogue.mattias-gcp.jetstacker.net
    secretName: spiffe-demo-rogue
